# VoBee-AI-Assistant

./: .env.example  .gitattributes  .gitignore  .htaccess  AI_TECHNOLOGIES_2025.md  API.md  APPLICATION_FACTORY.md  ARCHITECTURE.md  AUTONOMOUS_SYSTEM.md  AUTO_HEALING_EVOLUTION.md  CORE_ARCHITECTURE.md  COST_OPTIMIZATION.md  DEADLINE_ENFORCEMENT.md  DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  FACTORY_ARCHITECTURE.md  FACTORY_PIPELINE.md  FACTORY_SKELETONS.md  GETTING_STARTED.md  GUARDS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DEADLINE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FACTORIES.md  IMPLEMENTATION_SUMMARY_INVITE_SYSTEM.md  IMPLEMENTATION_SUMMARY_TESTING.md  INVITE_SYSTEM_SETUP.md  L20_IMPLEMENTATION_SUMMARY.md  MEGA-OPTIMIZER-SUMMARY.md  MIGRATION.md  MINIMAL_PIPELINE_SUMMARY.md  MOBILE_DEPLOYMENT.md  PERSONAL_AI_OS_EXTENSION.md  QA_TESTING.md  QUICKSTART.md  QUICKSTART_PERSONAL_AI_OS.md  README-new.md  README.md  (+39 more)
bot-system/mega-optimizer/: Cargo.toml
bot-system/mega-optimizer/src/: main.rs
bot-system/mega-optimizer/src/ai/: code_generator.rs  mod.rs  pattern_matcher.rs
bot-system/mega-optimizer/src/analyzers/: dependency_analyzer.rs  docker_analyzer.rs  mod.rs  python_analyzer.rs  rust_analyzer.rs
bot-system/mega-optimizer/src/github/: api.rs  mod.rs  pr_creator.rs  repo_scanner.rs
bot-system/mega-optimizer/src/optimizers/: cache_optimizer.rs  mod.rs  (+3 more)
bot-system/rust-ai-bridge/: Cargo.toml  README.md  rust_ai_bridge_wrapper.py
bot-system/rust-ai-bridge/src/: lib.rs
(+450 files in other folders)
