[package]
name = "mega-optimizer"
version = "1.0.0"
edition = "2021"
authors = ["Jan Vobora <jendavobora@example.com>"]
description = "Advanced multi-tech bot system for automatic code analysis and optimization"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octocrab = "0.34"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.release.build-override]
opt-level = 3
